# Advent-of-Code

./: .dir-locals.el  .gitignore  Cargo.toml
2015/: Cargo.toml  benchmarks.json  dd
2015/input/: day5p1.txt
2015/puzzles/: day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md  day20.md  day21.md  day22.md  day23.md  day24.md  day25.md
2015/src/: main.rs
2015/src/day1/: part1.rs  part2.rs
2015/src/day10/: part1.rs  part2.rs
2015/src/day11/: part1.rs  part2.rs
2015/src/day12/: part1.rs  part2.rs
2015/src/day13/: part1.rs  part2.rs
2015/src/day14/: part1.rs  part2.rs
2015/src/day15/: part1.rs  part2.rs
2015/src/day16/: part1.rs  part2.rs
2015/src/day17/: part1.rs  part2.rs
2015/src/day18/: part1.rs  part2.rs
2015/src/day19/: part1.rs  part2.rs
2015/src/day2/: part1.rs  part2.rs
2015/src/day20/: part1.rs  part2.rs
2015/src/day21/: part1.rs  part2.rs
2016/: Cargo.toml  dd
2016/puzzles/: day1.md  day10.md  day11.md  day2.md  day3.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md
2016/src/: main.rs
2019/: Cargo.toml
2019/src/: main.rs
2023/day1/: main.go
2023/day3/: main.go
2023/day4/: main.go
2024/: Cargo.toml
2024/src/: main.rs
2025/: Cargo.toml  dd
2025/input/: day9.in
2025/puzzles/: day10.md  day12.md  day7.md  day9.md
2025/src/: main.rs
aoc-lib/: Cargo.toml
aoc-lib/src/: benchmark.rs  grid.rs  lib.rs  math.rs  parsing.rs  pathfinding.rs
docs/plans/: 2025-12-10-aoc-lib-expansion-design.md
golang/: go.mod
rust/2024/: Cargo.toml  benchmarks.json
(+100 files in other folders)
