[workspace]
members = [
    "aoc-lib",
    "2015",
    "2016",
    "2019",
    "2024",
    "2025",
]
resolver = "2"

[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-time"
path = "src/bin/cargo-time.rs"

[dependencies]
aoc-lib = { path = "./aoc-lib" }
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
